<resources>
    <string name="app_name">NavDemoPic_XML</string>
    <string name="upperBody">Upper Body</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="abs">Abs</string>
    <string name="lowerBody">Lower Body</string>
    <string name="cardio">Cardio</string>
    <string name="other">Other</string>
    <string name="vertical_traction">Techno Vertical Traction</string>
    <string name="seated_dip">Seated Dip</string>
    <string name="mid_row">Mid Row</string>
    <string name="chest_press">Hoist Chest Press</string>
    <string name="bicep_curl">Bicep Curl</string>
    <string name="balance">Balance</string>
</resources>